conjunta-desarrollo-seguro/k8s/04-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: backend
    namespace: conjunta-desarrollo-seguro
spec:
    replicas: 1
    selector:
        matchLabels: { app: backend }
    template:
        metadata:
            labels: { app: backend }
        spec:
            automountServiceAccountToken: false
            securityContext:
                runAsNonRoot: true
                runAsUser: 1001
                runAsGroup: 1001
                fsGroup: 1001
            containers:
                - name: backend
                  image: inventrack-backend:1.0
                  imagePullPolicy: IfNotPresent
                  ports:
                      - containerPort: 4000
                  volumeMounts:
                      - name: uploads
                        mountPath: /app/uploads
                  readinessProbe:
                      httpGet: { path: /api/health, port: 4000 }
                      initialDelaySeconds: 10
                      periodSeconds: 5
                  livenessProbe:
                      httpGet: { path: /api/health, port: 4000 }
                      initialDelaySeconds: 20
                      periodSeconds: 15
                  resources:
                      requests: { cpu: 100m, memory: 128Mi }
                      limits: { cpu: 500m, memory: 256Mi }
            volumes:
                - name: uploads
                  persistentVolumeClaim: { claimName: uploads-pvc }
---
apiVersion: v1
kind: Service
metadata:
    name: backend
    namespace: conjunta-desarrollo-seguro
spec:
    type: ClusterIP
    selector: { app: backend }
    ports:
        - port: 4000
          targetPort: 4000
