conjunta-desarrollo-seguro/k8s/05-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: frontend
    namespace: conjunta-desarrollo-seguro
spec:
    replicas: 2
    selector:
        matchLabels: { app: frontend }
    template:
        metadata:
            labels: { app: frontend }
        spec:
            automountServiceAccountToken: false
            containers:
                - name: frontend
                  image: inventrack-frontend:1.0
                  imagePullPolicy: IfNotPresent
                  ports:
                      - containerPort: 80
                  readinessProbe:
                      httpGet: { path: /, port: 80 }
                      initialDelaySeconds: 5
                      periodSeconds: 5
                  resources:
                      requests: { cpu: 50m, memory: 32Mi }
                      limits: { cpu: 200m, memory: 64Mi }
---
apiVersion: v1
kind: Service
metadata:
    name: frontend
    namespace: conjunta-desarrollo-seguro
spec:
    type: ClusterIP
    selector: { app: frontend }
    ports:
        - port: 80
          targetPort: 80
