conjunta-desarrollo-seguro/k8s/06-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: inventrack-ingress
    namespace: conjunta-desarrollo-seguro
    annotations:
        nginx.ingress.kubernetes.io/proxy-body-size: "10m"
spec:
    ingressClassName: nginx
    rules:
        - host: conjunta3p.espe.edu.ec
          http:
              paths:
                  - path: /api
                    pathType: Prefix
                    backend:
                        service: { name: backend, port: { number: 4000 } }
                  - path: /uploads
                    pathType: Prefix
                    backend:
                        service: { name: backend, port: { number: 4000 } }
                  - path: /
                    pathType: Prefix
                    backend:
                        service: { name: frontend, port: { number: 80 } }
